# BPD-capstone-project

./: .gitignore  Cargo.toml  README.md  bitcoin_dashboard.sqlite-shm  bitcoin_dashboard.sqlite-wal  metrics_definitions.md
src/: api.rs  collectors.rs  db.rs  main.rs  rpc.rs
static/: index.css  index.html
